--- a/src/styles/dark_theme.qss
+++ b/src/styles/dark_theme.qss
@@ -51,6 +51,9 @@ QPushButton:hover {
 
 QPushButton:pressed {
     background-color: #004c8c;
+    padding-left: 17px;
+    padding-top: 7px;
+    border: 1px solid #003d70;
 }
 
 QLineEdit, QTextEdit, QPlainTextEdit {
