--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -33,14 +33,14 @@
        <item>
         <widget class="QPushButton" name="btn_home">
          <property name="text">
-          <string>PushButton</string>
+          <string>Home</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="btn_library">
          <property name="text">
-          <string>PushButton</string>
+          <string>Library</string>
          </property>
         </widget>
        </item>
@@ -60,7 +60,7 @@
        <item>
         <widget class="QPushButton" name="btn_settings">
          <property name="text">
-          <string>PushButton</string>
+          <string>Settings</string>
          </property>
         </widget>
        </item>
@@ -70,7 +70,7 @@
     <item>
      <widget class="QStackedWidget" name="stacked_widget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page_1">
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -79,7 +79,7 @@
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
-          <widget class="QWidget" name="scrollAreaWidgetContents">
+          <widget class="QWidget" name="scrollAreaWidgetContents_2">
            <property name="geometry">
             <rect>
              <x>0</x>
@@ -88,8 +88,8 @@
              <height>553</height>
             </rect>
            </property>
-           <layout class="QGridLayout" name="gridLayout_4">
-            <item row="0" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <item>
              <layout class="QGridLayout" name="library_grid"/>
             </item>
            </layout>
@@ -100,20 +100,7 @@
       </widget>
       <widget class="QWidget" name="page_2">
        <layout class="QGridLayout" name="gridLayout_5">
-        <item row="0" column="0" rowspan="2">
-         <widget class="QLabel" name="lbl_big_poster">
-          <property name="minimumSize">
-           <size>
-            <width>171</width>
-            <height>191</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
+        <item row="1" column="4">
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -126,7 +113,93 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="1" colspan="2">
+        <item row="1" column="0" rowspan="3">
+         <widget class="QLabel" name="lbl_big_poster">
+          <property name="minimumSize">
+           <size>
+            <width>171</width>
+            <height>191</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0" colspan="4">
+         <widget class="QLabel" name="lbl_synopsis">
+          <property name="minimumSize">
+           <size>
+            <width>621</width>
+            <height>81</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="4">
+         <widget class="QComboBox" name="combo_seasons">
+          <property name="minimumSize">
+           <size>
+            <width>201</width>
+            <height>41</height>
+           </size>
+          </property>
+          <property name="editable">
+           <bool>true</bool>
+          </property>
+          <property name="currentText">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="5">
+         <widget class="QScrollArea" name="scrollArea">
+          <property name="minimumSize">
+           <size>
+            <width>871</width>
+            <height>271</height>
+           </size>
+          </property>
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="episode_container">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>869</width>
+             <height>269</height>
+            </rect>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_3">
+            <item row="0" column="0">
+             <layout class="QVBoxLayout" name="episode_list_layout"/>
+            </item>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="3" column="1">
          <widget class="QLabel" name="lbl_title">
           <property name="minimumSize">
            <size>
@@ -148,68 +221,25 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="0" colspan="2">
-         <widget class="QLabel" name="lbl_synopsis">
-          <property name="minimumSize">
-           <size>
-            <width>621</width>
-            <height>81</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="2">
-         <widget class="QComboBox" name="combo_seasons">
-          <property name="minimumSize">
-           <size>
-            <width>201</width>
-            <height>41</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0" colspan="3">
-         <widget class="QScrollArea" name="scrollArea">
-          <property name="minimumSize">
-           <size>
-            <width>871</width>
-            <height>271</height>
-           </size>
-          </property>
-          <property name="widgetResizable">
-           <bool>true</bool>
-          </property>
-          <widget class="QWidget" name="episode_layout">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>869</width>
-             <height>269</height>
-            </rect>
-           </property>
-           <layout class="QGridLayout" name="gridLayout_6"/>
-          </widget>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <spacer name="horizontalSpacer">
+        <item row="1" column="1">
+         <spacer name="verticalSpacer_5">
           <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+           <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
-            <height>20</height>
+            <width>20</width>
+            <height>40</height>
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLabel" name="lbl_rating">
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -243,7 +273,7 @@
         <item row="0" column="1">
          <widget class="QPushButton" name="btn_browse_path">
           <property name="text">
-           <string>PushButton</string>
+           <string>Browse Folders</string>
           </property>
          </widget>
         </item>
@@ -266,7 +296,7 @@
         <item row="0" column="2" colspan="2">
          <widget class="QPushButton" name="btn_start_scan">
           <property name="text">
-           <string>PushButton</string>
+           <string>Scan</string>
           </property>
          </widget>
         </item>
@@ -309,17 +339,17 @@
           </property>
          </spacer>
         </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="lbl_scan_status">
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="0" colspan="4">
          <widget class="QProgressBar" name="scan_progress">
           <property name="value">
            <number>24</number>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="3">
+         <widget class="QLabel" name="lbl_scan_status">
+          <property name="text">
+           <string>TextLabel</string>
           </property>
          </widget>
         </item>
